fix(productivity-suite): fix body overflow in todos page
fix the todos page body overflowing causing an unwanted/buggy
scrolling behaviour on certain screen sizes

--- a/productivity-suite/app/fragments/todo-lists/src/root.css
+++ b/productivity-suite/app/fragments/todo-lists/src/root.css
@@ -5,5 +5,5 @@
 .todo-lists-section {
     width: max-content;
     margin: auto;
-    max-width: calc(90vw - 2rem);
+    max-width: calc(85vw - 2rem);
 }
