--- a/productivity-suite/app/fragments/todos/src/App.css
+++ b/productivity-suite/app/fragments/todos/src/App.css
@@ -7,7 +7,7 @@
 	background: #f5f5f5;
 	color: #4d4d4d;
 	width: 100vw;
-	max-width: min(55rem, calc(90vw - 2rem));
+	max-width: min(55rem, calc(85vw - 2rem));
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	font-weight: 300;
